Added Mapper layer for translating between Ibexa and Symfony Notification/Recipient objects

--- a/src/bundle/Resources/config/services.yaml
+++ b/src/bundle/Resources/config/services.yaml
@@ -1,3 +1,4 @@
 imports:
+    - { resource: services/mappers.yaml }
     - { resource: services/papi.yaml }
     - { resource: services/subscription_resolver.yaml }
