--- a/src/bundle/Resources/config/services.yaml
+++ b/src/bundle/Resources/config/services.yaml
@@ -1,2 +1,4 @@
 imports:
-    - { resource: services/**/*.yaml }
+    - { resource: services/mappers.yaml }
+    - { resource: services/papi.yaml }
+    - { resource: services/subscription_resolver.yaml }
