--- a/src/bundle/Resources/config/prepend.yaml
+++ b/src/bundle/Resources/config/prepend.yaml
@@ -1,5 +1,7 @@
 # Prepended configuration: first level key is an extension name.
 
-#ibexa:
-#    system:
-#        default:
+ibexa:
+    system:
+        default:
+            notifications:
+                subscriptions: []
