--- a/composer.json
+++ b/composer.json
@@ -1,65 +1,65 @@
 {
-  "name": "ibexa/notifications",
-  "license": "(GPL-2.0-only or proprietary)",
-  "type": "ibexa-bundle",
-  "keywords": [
-    "ibexa-dxp"
-  ],
-  "require": {
-    "php": "^7.4 || ^8.0",
-    "ibexa/core": "~4.6.x-dev",
-    "symfony/config": "^5.4",
-    "symfony/dependency-injection": "^5.4",
-    "symfony/event-dispatcher": "^5.4",
-    "symfony/event-dispatcher-contracts": "^2.2",
-    "symfony/http-foundation": "^5.4",
-    "symfony/http-kernel": "^5.4",
-    "symfony/yaml": "^5.4",
-    "symfony/notifier": "^5.4"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9",
-    "ibexa/code-style": "^1.1",
-    "ibexa/doctrine-schema": "~4.6.x-dev",
-    "phpstan/phpstan": "^1.10",
-    "phpstan/phpstan-phpunit": "^1.3",
-    "phpstan/phpstan-symfony": "^1.3",
-    "qossmic/deptrac-shim": "^0.24.0 || ^1.0.2"
-  },
-  "autoload": {
-    "psr-4": {
-      "Ibexa\\Bundle\\Notifications\\": "src/bundle/",
-      "Ibexa\\Contracts\\Notifications\\": "src/contracts/",
-      "Ibexa\\Notifications\\": "src/lib/"
+    "name": "ibexa/notifications",
+    "license": "(GPL-2.0-only or proprietary)",
+    "type": "ibexa-bundle",
+    "keywords": [
+        "ibexa-dxp"
+    ],
+    "require": {
+        "php": "^7.4 || ^8.0",
+        "ibexa/core": "~4.6",
+        "symfony/config": "^5.4",
+        "symfony/dependency-injection": "^5.4",
+        "symfony/event-dispatcher": "^5.4",
+        "symfony/event-dispatcher-contracts": "^2.2",
+        "symfony/http-foundation": "^5.4",
+        "symfony/http-kernel": "^5.4",
+        "symfony/yaml": "^5.4",
+        "symfony/notifier": "^5.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "ibexa/code-style": "^1.1",
+        "ibexa/doctrine-schema": "~4.6",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-symfony": "^1.3",
+        "qossmic/deptrac-shim": "^0.24.0 || ^1.0.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Ibexa\\Bundle\\Notifications\\": "src/bundle/",
+            "Ibexa\\Contracts\\Notifications\\": "src/contracts/",
+            "Ibexa\\Notifications\\": "src/lib/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Ibexa\\Tests\\Bundle\\Notifications\\": "tests/bundle/",
+            "Ibexa\\Tests\\Integration\\Notifications\\": "tests/integration/",
+            "Ibexa\\Tests\\Notifications\\": "tests/lib/"
+        }
+    },
+    "scripts": {
+        "fix-cs": "php-cs-fixer fix --config=.php-cs-fixer.php --show-progress=dots",
+        "check-cs": "@fix-cs --dry-run",
+        "test": "phpunit -c phpunit.xml.dist",
+        "phpstan": "phpstan analyse -c phpstan.neon",
+        "deptrac": "php vendor/bin/deptrac analyse"
+    },
+    "scripts-descriptions": {
+        "fix-cs": "Automatically fixes code style in all files",
+        "check-cs": "Run code style checker for all files",
+        "test": "Run automatic tests",
+        "phpstan": "Run static code analysis",
+        "deptrac": "Run Deptrac architecture testing"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-main": "4.6.x-dev"
+        }
+    },
+    "config": {
+        "allow-plugins": false
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Ibexa\\Tests\\Bundle\\Notifications\\": "tests/bundle/",
-      "Ibexa\\Tests\\Integration\\Notifications\\": "tests/integration/",
-      "Ibexa\\Tests\\Notifications\\": "tests/lib/"
-    }
-  },
-  "scripts": {
-    "fix-cs": "php-cs-fixer fix --config=.php-cs-fixer.php --show-progress=dots",
-    "check-cs": "@fix-cs --dry-run",
-    "test": "phpunit -c phpunit.xml.dist",
-    "phpstan": "phpstan analyse -c phpstan.neon",
-    "deptrac": "php vendor/bin/deptrac analyse"
-  },
-  "scripts-descriptions": {
-    "fix-cs": "Automatically fixes code style in all files",
-    "check-cs": "Run code style checker for all files",
-    "test": "Run automatic tests",
-    "phpstan": "Run static code analysis",
-    "deptrac": "Run Deptrac architecture testing"
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-main": "4.6.x-dev"
-    }
-  },
-  "config": {
-    "allow-plugins": false
-  }
 }
