--- a/composer.json
+++ b/composer.json
@@ -6,23 +6,23 @@
         "ibexa-dxp"
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": " >=8.3",
         "ibexa/core": "~5.0.x-dev",
         "symfony/config": "^5.4",
         "symfony/dependency-injection": "^5.4",
         "symfony/event-dispatcher": "^5.4",
         "symfony/http-foundation": "^5.4",
         "symfony/http-kernel": "^5.4",
-        "symfony/yaml": "^5.4",
-        "symfony/notifier": "^5.4"
+        "symfony/notifier": "^5.4",
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
         "ibexa/code-style": "^1.1",
         "ibexa/doctrine-schema": "~5.0.x-dev",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-symfony": "^1.3",
+        "phpunit/phpunit": "^9",
         "qossmic/deptrac-shim": "^0.24.0 || ^1.0.2"
     },
     "autoload": {
@@ -59,6 +59,7 @@
         }
     },
     "config": {
-        "allow-plugins": false
+        "allow-plugins": false,
+        "sort-packages": true
     }
 }
