--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "symfony/yaml": "^5.4"
     },
     "require-dev": {
-        "ibexa/code-style": "^1.1",
+        "ibexa/code-style": "~2.0.0",
         "ibexa/doctrine-schema": "~5.0.x-dev",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1.3",
