IBX-8736: Allowed to sent user notification via symfony/notifier

--- a/src/bundle/Resources/config/services.yaml
+++ b/src/bundle/Resources/config/services.yaml
@@ -2,3 +2,4 @@ imports:
     - { resource: services/mappers.yaml }
     - { resource: services/papi.yaml }
     - { resource: services/subscription_resolver.yaml }
+    - { resource: services/system_notifications.yaml }
