--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "ibexa/core": "~4.6.x-dev",
+        "ibexa/core": "~4.6",
         "symfony/config": "^5.4",
         "symfony/dependency-injection": "^5.4",
         "symfony/event-dispatcher": "^5.4",
@@ -19,7 +19,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9",
         "ibexa/code-style": "^1.1",
-        "ibexa/doctrine-schema": "~4.6.x-dev",
+        "ibexa/doctrine-schema": "~4.6",
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-phpunit": "^2.0",
         "phpstan/phpstan-symfony": "^2.0",
