--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -3,14 +3,24 @@ name: Frontend build
 on:
     push:
         paths:
+            - "**.cjs"
+            - "**.mjs"
             - "**.js"
+            - "**.jsx"
+            - "**.ts"
+            - "**.tsx"
             - "**.scss"
         branches:
             - main
             - '[0-9]+.[0-9]+'
     pull_request:
         paths:
+            - "**.cjs"
+            - "**.mjs"
             - "**.js"
+            - "**.jsx"
+            - "**.ts"
+            - "**.tsx"
             - "**.scss"
 
 jobs:
@@ -23,6 +33,6 @@ jobs:
             -   uses: actions/checkout@v4
             -   uses: actions/setup-node@v4
                 with:
-                    node-version: '18'
+                    node-version: '20'
             -   run: yarn install
             -   run: yarn test
