--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/event-dispatcher": "^7.2",
         "symfony/http-foundation": "^7.2",
         "symfony/http-kernel": "^7.2",
+        "symfony/mailer": "^7.2",
         "symfony/notifier": "^7.2",
         "symfony/yaml": "^7.2"
     },
