--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     ],
     "require": {
         "php": " >=8.3",
-        "ibexa/core": "~5.0.x-dev",
+        "ibexa/core": "~5.0@rc",
         "symfony/config": "^7.2",
         "symfony/dependency-injection": "^7.2",
         "symfony/event-dispatcher": "^7.2",
@@ -21,8 +21,8 @@
     },
     "require-dev": {
         "ibexa/code-style": "~2.0.0",
-        "ibexa/doctrine-schema": "~5.0.x-dev",
-        "ibexa/rector": "~5.0.x-dev",
+        "ibexa/doctrine-schema": "~5.0@rc",
+        "ibexa/rector": "~5.0@rc",
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-phpunit": "^2.0",
         "phpstan/phpstan-symfony": "^2.0",
